临时兼容方案

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "displayName": "GitLab Pipelines",
   "description": "GitLab Pipelines Monitor",
   "version": "1.0.0",
-  "icon": ".assets/logo.jpeg",
+  "icon": ".assets/logo.png",
   "engines": {
     "vscode": "^1.61.0"
   },
