--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
       "properties": {
         "GitLabPipelines": {
           "type": "object",
-          "description": "配置详情见 https://wiki.inkept.cn/pages/viewpage.action?pageId=198821906 "
+          "description": "配置详情见 https://github.com/Jameswain/gitlab-pipelines"
         }
       }
     },
@@ -42,12 +42,13 @@
     "watch": "tsc -watch -p ./",
     "pretest": "npm run compile && npm run lint",
     "lint": "eslint src --ext ts",
-    "test": "node ./out/test/runTest.js"
+    "test": "node ./out/test/runTest.js",
+    "package": "npx vsce package"
   },
   "devDependencies": {
     "@types/glob": "^7.1.4",
     "@types/mocha": "^9.0.0",
-    "@types/node": "14.x",
+    "@types/node": "^14.18.1",
     "@types/vscode": "^1.61.0",
     "@typescript-eslint/eslint-plugin": "^4.31.1",
     "@typescript-eslint/parser": "^4.31.1",
