--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "publisher": "jameswain",
   "displayName": "GitLab Pipelines",
   "description": "GitLab Pipelines Monitor",
-  "version": "1.0.12",
+  "version": "1.0.15",
   "icon": ".assets/logo.png",
   "engines": {
     "vscode": "^1.61.0"
@@ -59,7 +59,8 @@
     "typescript": "^4.4.3"
   },
   "dependencies": {
-    "axios": "^0.22.0"
+    "axios": "^0.22.0",
+    "request": "^2.88.2"
   },
   "repository": {
     "type": "git",
